--- a/capitIndexChart1Y.html
+++ b/capitIndexChart1Y.html
@@ -297,7 +297,8 @@ data.addRows([
 [new Date(2022,2,2,0,0,0),399.64],
 [new Date(2022,2,3,0,0,0),458.39],
 [new Date(2022,2,4,0,0,0),474.33],
-[new Date(2022,2,4,0,0,0),474.33]
+[new Date(2022,2,5,0,0,0),476.02],
+[new Date(2022,2,5,0,0,0),476.02]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy"
@@ -351,7 +352,7 @@ drawChart();
 <tr>
 <td class = "rightTextAlign">Latest:</td>
 <td>474.8</td>
-<td class = "leftTextAlign">05 March 2022</td>
+<td class = "leftTextAlign">06 March 2022</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
