--- a/capitIndexChart1Y.html
+++ b/capitIndexChart1Y.html
@@ -298,7 +298,8 @@ data.addRows([
 [new Date(2022,2,3,0,0,0),458.39],
 [new Date(2022,2,4,0,0,0),474.33],
 [new Date(2022,2,5,0,0,0),476.02],
-[new Date(2022,2,5,0,0,0),476.02]
+[new Date(2022,2,6,0,0,0),474.79],
+[new Date(2022,2,6,0,0,0),474.79]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy"
@@ -351,8 +352,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>475.9</td>
-<td class = "leftTextAlign">06 March 2022</td>
+<td>475.3</td>
+<td class = "leftTextAlign">07 March 2022</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
