--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -61,7 +61,8 @@ data.addRows([
 [new Date(2022,2,7,5,0,0),475.41],
 [new Date(2022,2,7,6,0,0),475.41],
 [new Date(2022,2,7,7,0,0),476.47],
-[new Date(2022,2,7,7,0,0),476.47]
+[new Date(2022,2,7,7,15,0),476.47],
+[new Date(2022,2,7,7,15,0),476.47]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -114,8 +115,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>476.5</td>
-<td class = "leftTextAlign">07 March 2022 07:15</td>
+<td>477.6</td>
+<td class = "leftTextAlign">07 March 2022 07:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
