--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -62,7 +62,8 @@ data.addRows([
 [new Date(2022,2,7,6,0,0),475.41],
 [new Date(2022,2,7,7,0,0),476.47],
 [new Date(2022,2,7,7,15,0),476.47],
-[new Date(2022,2,7,7,15,0),476.47]
+[new Date(2022,2,7,7,30,0),477.55],
+[new Date(2022,2,7,7,30,0),477.55]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -115,8 +116,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>477.6</td>
-<td class = "leftTextAlign">07 March 2022 07:30</td>
+<td>473.1</td>
+<td class = "leftTextAlign">07 March 2022 07:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
@@ -125,8 +126,8 @@ drawChart();
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
-<td>474.8</td>
-<td class = "leftTextAlign">06 March 2022 18:00</td>
+<td>473.1</td>
+<td class = "leftTextAlign">07 March 2022 07:45</td>
 </tr>
 </tbody>
 </table>
