--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -63,7 +63,8 @@ data.addRows([
 [new Date(2022,2,7,7,15,0),476.47],
 [new Date(2022,2,7,7,30,0),477.55],
 [new Date(2022,2,7,7,45,0),473.08],
-[new Date(2022,2,7,7,45,0),473.08]
+[new Date(2022,2,7,8,0,0),472.79],
+[new Date(2022,2,7,8,0,0),472.79]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -116,8 +117,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>472.8</td>
-<td class = "leftTextAlign">07 March 2022 08:00</td>
+<td>478.7</td>
+<td class = "leftTextAlign">07 March 2022 08:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
