--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -64,7 +64,8 @@ data.addRows([
 [new Date(2022,2,7,7,30,0),477.55],
 [new Date(2022,2,7,7,45,0),473.08],
 [new Date(2022,2,7,8,0,0),472.79],
-[new Date(2022,2,7,8,0,0),472.79]
+[new Date(2022,2,7,8,15,0),478.66],
+[new Date(2022,2,7,8,15,0),478.66]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -117,13 +118,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>478.7</td>
-<td class = "leftTextAlign">07 March 2022 08:15</td>
+<td>482</td>
+<td class = "leftTextAlign">07 March 2022 08:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td>478.8</td>
-<td class = "leftTextAlign">06 March 2022 20:00</td>
+<td>482</td>
+<td class = "leftTextAlign">07 March 2022 08:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
