--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -65,7 +65,8 @@ data.addRows([
 [new Date(2022,2,7,7,45,0),473.08],
 [new Date(2022,2,7,8,0,0),472.79],
 [new Date(2022,2,7,8,15,0),478.66],
-[new Date(2022,2,7,8,15,0),478.66]
+[new Date(2022,2,7,8,30,0),481.96],
+[new Date(2022,2,7,8,30,0),481.96]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -118,8 +119,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>482</td>
-<td class = "leftTextAlign">07 March 2022 08:30</td>
+<td>478.6</td>
+<td class = "leftTextAlign">07 March 2022 08:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
