--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -66,7 +66,8 @@ data.addRows([
 [new Date(2022,2,7,8,15,0),478.66],
 [new Date(2022,2,7,8,30,0),481.96],
 [new Date(2022,2,7,8,45,0),478.62],
-[new Date(2022,2,7,8,45,0),478.62]
+[new Date(2022,2,7,9,0,0),483.57],
+[new Date(2022,2,7,9,0,0),483.57]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -119,8 +120,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>483.6</td>
-<td class = "leftTextAlign">07 March 2022 09:00</td>
+<td>481.7</td>
+<td class = "leftTextAlign">07 March 2022 09:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
