--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -68,7 +68,8 @@ data.addRows([
 [new Date(2022,2,7,8,45,0),478.62],
 [new Date(2022,2,7,9,0,0),483.57],
 [new Date(2022,2,7,9,15,0),481.65],
-[new Date(2022,2,7,9,15,0),481.65]
+[new Date(2022,2,7,9,30,0),491.38],
+[new Date(2022,2,7,9,30,0),491.38]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -121,13 +122,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>491.4</td>
-<td class = "leftTextAlign">07 March 2022 09:30</td>
+<td>491.9</td>
+<td class = "leftTextAlign">07 March 2022 09:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td>491.4</td>
-<td class = "leftTextAlign">07 March 2022 09:30</td>
+<td>491.9</td>
+<td class = "leftTextAlign">07 March 2022 09:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
