--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -70,7 +70,8 @@ data.addRows([
 [new Date(2022,2,7,9,30,0),491.38],
 [new Date(2022,2,7,9,45,0),491.87],
 [new Date(2022,2,7,10,0,0),490.19],
-[new Date(2022,2,7,10,0,0),490.19]
+[new Date(2022,2,7,10,15,0),489.97],
+[new Date(2022,2,7,10,15,0),489.97]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -123,8 +124,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>490</td>
-<td class = "leftTextAlign">07 March 2022 10:15</td>
+<td>491.4</td>
+<td class = "leftTextAlign">07 March 2022 10:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
