--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -71,7 +71,8 @@ data.addRows([
 [new Date(2022,2,7,9,45,0),491.87],
 [new Date(2022,2,7,10,0,0),490.19],
 [new Date(2022,2,7,10,15,0),489.97],
-[new Date(2022,2,7,10,15,0),489.97]
+[new Date(2022,2,7,10,30,0),491.38],
+[new Date(2022,2,7,10,30,0),491.38]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -124,8 +125,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>491.4</td>
-<td class = "leftTextAlign">07 March 2022 10:30</td>
+<td>489.6</td>
+<td class = "leftTextAlign">07 March 2022 10:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
