--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -73,7 +73,8 @@ data.addRows([
 [new Date(2022,2,7,10,30,0),491.38],
 [new Date(2022,2,7,10,45,0),489.56],
 [new Date(2022,2,7,11,0,0),486.9],
-[new Date(2022,2,7,11,0,0),486.9]
+[new Date(2022,2,7,11,15,0),488.53],
+[new Date(2022,2,7,11,15,0),488.53]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -126,8 +127,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>488.5</td>
-<td class = "leftTextAlign">07 March 2022 11:15</td>
+<td>489.3</td>
+<td class = "leftTextAlign">07 March 2022 11:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
