--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -75,7 +75,8 @@ data.addRows([
 [new Date(2022,2,7,11,15,0),488.53],
 [new Date(2022,2,7,11,30,0),489.33],
 [new Date(2022,2,7,11,45,0),489.66],
-[new Date(2022,2,7,11,45,0),489.66]
+[new Date(2022,2,7,12,0,0),490.41],
+[new Date(2022,2,7,12,0,0),490.41]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -128,8 +129,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>490.4</td>
-<td class = "leftTextAlign">07 March 2022 12:00</td>
+<td>491.3</td>
+<td class = "leftTextAlign">07 March 2022 12:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
