--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -78,7 +78,8 @@ data.addRows([
 [new Date(2022,2,7,12,15,0),491.33],
 [new Date(2022,2,7,12,30,0),494.18],
 [new Date(2022,2,7,12,45,0),497.82],
-[new Date(2022,2,7,12,45,0),497.82]
+[new Date(2022,2,7,13,0,0),502.21],
+[new Date(2022,2,7,13,0,0),502.21]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -131,8 +132,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>502.2</td>
-<td class = "leftTextAlign">07 March 2022 13:00</td>
+<td>501.6</td>
+<td class = "leftTextAlign">07 March 2022 13:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
