--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -80,7 +80,8 @@ data.addRows([
 [new Date(2022,2,7,12,45,0),497.82],
 [new Date(2022,2,7,13,0,0),502.21],
 [new Date(2022,2,7,13,15,0),501.6],
-[new Date(2022,2,7,13,15,0),501.6]
+[new Date(2022,2,7,13,30,0),505.36],
+[new Date(2022,2,7,13,30,0),505.36]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -133,13 +134,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>505.4</td>
-<td class = "leftTextAlign">07 March 2022 13:30</td>
+<td>509</td>
+<td class = "leftTextAlign">07 March 2022 13:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td>505.4</td>
-<td class = "leftTextAlign">07 March 2022 13:30</td>
+<td>509</td>
+<td class = "leftTextAlign">07 March 2022 13:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
