--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -81,7 +81,8 @@ data.addRows([
 [new Date(2022,2,7,13,15,0),501.6],
 [new Date(2022,2,7,13,30,0),505.36],
 [new Date(2022,2,7,13,45,0),509.04],
-[new Date(2022,2,7,13,45,0),509.04]
+[new Date(2022,2,7,14,0,0),508.64],
+[new Date(2022,2,7,14,0,0),508.64]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -134,8 +135,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>508.6</td>
-<td class = "leftTextAlign">07 March 2022 14:00</td>
+<td>503.9</td>
+<td class = "leftTextAlign">07 March 2022 14:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
