--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -83,7 +83,8 @@ data.addRows([
 [new Date(2022,2,7,13,45,0),509.04],
 [new Date(2022,2,7,14,0,0),508.64],
 [new Date(2022,2,7,14,15,0),503.94],
-[new Date(2022,2,7,14,15,0),503.94]
+[new Date(2022,2,7,14,30,0),500.05],
+[new Date(2022,2,7,14,30,0),500.05]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -136,8 +137,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>500.1</td>
-<td class = "leftTextAlign">07 March 2022 14:30</td>
+<td>498.7</td>
+<td class = "leftTextAlign">07 March 2022 14:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
