--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -84,7 +84,8 @@ data.addRows([
 [new Date(2022,2,7,14,15,0),503.94],
 [new Date(2022,2,7,14,30,0),500.05],
 [new Date(2022,2,7,14,45,0),498.71],
-[new Date(2022,2,7,14,45,0),498.71]
+[new Date(2022,2,7,15,0,0),500.55],
+[new Date(2022,2,7,15,0,0),500.55]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -137,8 +138,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>500.6</td>
-<td class = "leftTextAlign">07 March 2022 15:00</td>
+<td>503.3</td>
+<td class = "leftTextAlign">07 March 2022 15:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
