--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -86,7 +86,8 @@ data.addRows([
 [new Date(2022,2,7,14,45,0),498.71],
 [new Date(2022,2,7,15,0,0),500.55],
 [new Date(2022,2,7,15,15,0),503.33],
-[new Date(2022,2,7,15,15,0),503.33]
+[new Date(2022,2,7,15,30,0),500.71],
+[new Date(2022,2,7,15,30,0),500.71]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -139,8 +140,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>500.7</td>
-<td class = "leftTextAlign">07 March 2022 15:30</td>
+<td>501.8</td>
+<td class = "leftTextAlign">07 March 2022 15:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
