--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -88,7 +88,8 @@ data.addRows([
 [new Date(2022,2,7,15,30,0),500.71],
 [new Date(2022,2,7,15,45,0),501.83],
 [new Date(2022,2,7,16,0,0),504.96],
-[new Date(2022,2,7,16,0,0),504.96]
+[new Date(2022,2,7,16,15,0),505.28],
+[new Date(2022,2,7,16,15,0),505.28]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -141,13 +142,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>505.3</td>
-<td class = "leftTextAlign">07 March 2022 16:15</td>
+<td>509.5</td>
+<td class = "leftTextAlign">07 March 2022 16:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td>509</td>
-<td class = "leftTextAlign">07 March 2022 13:45</td>
+<td>509.5</td>
+<td class = "leftTextAlign">07 March 2022 16:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
