--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -89,7 +89,8 @@ data.addRows([
 [new Date(2022,2,7,15,45,0),501.83],
 [new Date(2022,2,7,16,0,0),504.96],
 [new Date(2022,2,7,16,15,0),505.28],
-[new Date(2022,2,7,16,15,0),505.28]
+[new Date(2022,2,7,16,30,0),509.46],
+[new Date(2022,2,7,16,30,0),509.46]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -142,8 +143,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>509.5</td>
-<td class = "leftTextAlign">07 March 2022 16:30</td>
+<td>508.3</td>
+<td class = "leftTextAlign">07 March 2022 16:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
