--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -90,7 +90,8 @@ data.addRows([
 [new Date(2022,2,7,16,15,0),505.28],
 [new Date(2022,2,7,16,30,0),509.46],
 [new Date(2022,2,7,16,45,0),508.3],
-[new Date(2022,2,7,16,45,0),508.3]
+[new Date(2022,2,7,17,0,0),507.53],
+[new Date(2022,2,7,17,0,0),507.53]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -143,8 +144,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>507.5</td>
-<td class = "leftTextAlign">07 March 2022 17:00</td>
+<td>504.7</td>
+<td class = "leftTextAlign">07 March 2022 17:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
