--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -91,7 +91,8 @@ data.addRows([
 [new Date(2022,2,7,16,30,0),509.46],
 [new Date(2022,2,7,16,45,0),508.3],
 [new Date(2022,2,7,17,0,0),507.53],
-[new Date(2022,2,7,17,0,0),507.53]
+[new Date(2022,2,7,17,15,0),504.71],
+[new Date(2022,2,7,17,15,0),504.71]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -145,7 +146,7 @@ drawChart();
 <tr>
 <td class = "rightTextAlign">Latest:</td>
 <td>504.7</td>
-<td class = "leftTextAlign">07 March 2022 17:15</td>
+<td class = "leftTextAlign">07 March 2022 17:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
