--- a/sample-table-1M.html
+++ b/sample-table-1M.html
@@ -52,19 +52,19 @@ font-size:14px;
 <tr>
 <td class="cap-rate-2">2%</td>
 <td class="cap-rate-2">
-<span id="myText1">&pound12,400</span>
+<span id="myText1">&pound12,300</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText2">&pound20,500</span>
+<span id="myText2">&pound20,400</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText3">&pound28,900</span>
+<span id="myText3">&pound28,700</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText4">&pound37,300</span>
+<span id="myText4">&pound37,100</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText5">&pound79,300</span>
+<span id="myText5">&pound78,800</span>
 </td>
 </tr>
 <tr>
@@ -79,10 +79,10 @@ font-size:14px;
 <span id="myText8">&pound16,800</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText9">&pound21,800</span>
+<span id="myText9">&pound21,700</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText10">&pound49,300</span>
+<span id="myText10">&pound49,000</span>
 </td>
 </tr>
 <tr>
@@ -97,16 +97,16 @@ font-size:14px;
 <span id="myText13">&pound11,500</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText14">&pound14,800</span>
+<span id="myText14">&pound14,700</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText15">&pound12,400</span>
+<span id="myText15">&pound12,300</span>
 </td>
 </tr>
 </tbody>
 </table>
 <div>
-<p id="last-updated" style="text-align: center;">Last updated: 08 March 2022 at 12:45 UK time</p>
+<p style="text-align: center;">Last updated: 08 March 2022 at 13:00 UK time</p>
 </div>
 </div>
 </main>
