--- a/sample-table-2M.html
+++ b/sample-table-2M.html
@@ -52,37 +52,37 @@ font-size:14px;
 <tr>
 <td class="cap-rate-2">2%</td>
 <td class="cap-rate-2">
-<span id="myText1">&pound22,700</span>
+<span id="myText1">&pound22,400</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText2">&pound40,700</span>
+<span id="myText2">&pound40,300</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText3">&pound57,800</span>
+<span id="myText3">&pound57,400</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText4">&pound74,600</span>
+<span id="myText4">&pound74,100</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText5">&pound158,600</span>
+<span id="myText5">&pound157,600</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-3">3%</td>
 <td class="cap-rate-3">
-<span id="myText6">&pound11,700</span>
+<span id="myText6">&pound11,600</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText7">&pound21,500</span>
+<span id="myText7">&pound21,400</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText8">&pound32,500</span>
+<span id="myText8">&pound32,400</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText9">&pound43,500</span>
+<span id="myText9">&pound43,200</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText10">&pound98,500</span>
+<span id="myText10">&pound98,000</span>
 </td>
 </tr>
 <tr>
@@ -94,19 +94,19 @@ font-size:14px;
 <span id="myText12">&pound13,700</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText13">&pound20,700</span>
+<span id="myText13">&pound20,600</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText14">&pound27,900</span>
+<span id="myText14">&pound27,800</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText15">&pound22,700</span>
+<span id="myText15">&pound22,400</span>
 </td>
 </tr>
 </tbody>
 </table>
 <div>
-<p id="last-updated" style="text-align: center;">Last updated: 08 March 2022 at 12:45 UK time</p>
+<p style="text-align: center;">Last updated: 08 March 2022 at 13:00 UK time</p>
 </div>
 </div>
 </main>
