--- a/sample-table-3M.html
+++ b/sample-table-3M.html
@@ -52,61 +52,61 @@ font-size:14px;
 <tr>
 <td class="cap-rate-2">2%</td>
 <td class="cap-rate-2">
-<span id="myText1">&pound34,000</span>
+<span id="myText1">&pound33,600</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText2">&pound61,000</span>
+<span id="myText2">&pound60,400</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText3">&pound86,600</span>
+<span id="myText3">&pound86,000</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText4">&pound111,900</span>
+<span id="myText4">&pound111,100</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText5">&pound237,900</span>
+<span id="myText5">&pound236,400</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-3">3%</td>
 <td class="cap-rate-3">
-<span id="myText6">&pound16,300</span>
+<span id="myText6">&pound16,200</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText7">&pound32,100</span>
+<span id="myText7">&pound31,900</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText8">&pound48,800</span>
+<span id="myText8">&pound48,500</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText9">&pound65,200</span>
+<span id="myText9">&pound64,800</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText10">&pound147,700</span>
+<span id="myText10">&pound147,000</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-4">4%</td>
 <td class="cap-rate-4">
-<span id="myText11">&pound10,100</span>
+<span id="myText11">&pound10,000</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText12">&pound19,600</span>
+<span id="myText12">&pound19,500</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText13">&pound30,800</span>
+<span id="myText13">&pound30,700</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText14">&pound41,900</span>
+<span id="myText14">&pound41,700</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText15">&pound34,000</span>
+<span id="myText15">&pound33,600</span>
 </td>
 </tr>
 </tbody>
 </table>
 <div>
-<p id="last-updated" style="text-align: center;">Last updated: 08 March 2022 at 12:45 UK time</p>
+<p style="text-align: center;">Last updated: 08 March 2022 at 13:00 UK time</p>
 </div>
 </div>
 </main>
