--- a/sample-table-5M.html
+++ b/sample-table-5M.html
@@ -52,61 +52,61 @@ font-size:14px;
 <tr>
 <td class="cap-rate-2">2%</td>
 <td class="cap-rate-2">
-<span id="myText1">&pound56,600</span>
+<span id="myText1">&pound56,000</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText2">&pound101,600</span>
+<span id="myText2">&pound100,700</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText3">&pound144,400</span>
+<span id="myText3">&pound143,300</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText4">&pound186,500</span>
+<span id="myText4">&pound185,200</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText5">&pound396,400</span>
+<span id="myText5">&pound394,000</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-3">3%</td>
 <td class="cap-rate-3">
-<span id="myText6">&pound26,200</span>
+<span id="myText6">&pound25,900</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText7">&pound53,500</span>
+<span id="myText7">&pound53,200</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText8">&pound81,300</span>
+<span id="myText8">&pound80,800</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText9">&pound108,600</span>
+<span id="myText9">&pound107,900</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText10">&pound246,200</span>
+<span id="myText10">&pound244,900</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-4">4%</td>
 <td class="cap-rate-4">
-<span id="myText11">&pound14,900</span>
+<span id="myText11">&pound14,800</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText12">&pound32,100</span>
+<span id="myText12">&pound32,000</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText13">&pound51,200</span>
+<span id="myText13">&pound51,100</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText14">&pound69,800</span>
+<span id="myText14">&pound69,500</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText15">&pound56,600</span>
+<span id="myText15">&pound56,000</span>
 </td>
 </tr>
 </tbody>
 </table>
 <div>
-<p id="last-updated" style="text-align: center;">Last updated: 08 March 2022 at 12:45 UK time</p>
+<p style="text-align: center;">Last updated: 08 March 2022 at 13:00 UK time</p>
 </div>
 </div>
 </main>
