--- a/sample-table-4M.html
+++ b/sample-table-4M.html
@@ -106,7 +106,7 @@ font-size:14px;
 </tbody>
 </table>
 <div>
-<p style="text-align: center;">Last updated: 08 March 2022 at 13:30 UK time</p>
+<p id="last-updated" style="text-align: center;">Last updated: 08 March 2022 at 13:30 UK time</p>
 </div>
 </div>
 </main>
