--- a/capIncome.html
+++ b/capIncome.html
@@ -30,7 +30,7 @@ width:100%;
 </style>
 </head>
 
-<body>
+<body onload="calIncome()">
 <table class="GeneratedTable">
   <colgroup>
        <col span="1" style="width: 50%;">
@@ -77,30 +77,30 @@ var income = document.getElementById("amount-protected-slider").value*(document.
 if (income < 0) {
 	income = 0;
 }
-document.getElementById("annual-income-output").textContent = income;
+document.getElementById("annual-income-output").textContent="£" + income;
 }
 
-document.getElementById("amount-protected-slider").value = 250000;
+document.getElementById("amount-protected-slider").value =250000;
 document.getElementById("benchmark-interest-rate-slider").value = 100;
 document.getElementById("cap-rate-slider").value = 100;
 
 
 
-document.getElementById("amount-protected-input-display").textContent = document.getElementById("amount-protected-slider").value;
+document.getElementById("amount-protected-input-display").textContent ="£"+ document.getElementById("amount-protected-slider").value;
 document.getElementById("amount-protected-slider").oninput = function() {
-document.getElementById("amount-protected-input-display").textContent = this.value;
+document.getElementById("amount-protected-input-display").textContent = "£"+this.value;
 calIncome();
 }
 
-document.getElementById("benchmark-interest-rate-input-display").textContent = document.getElementById("benchmark-interest-rate-slider").value/100;
+document.getElementById("benchmark-interest-rate-input-display").textContent = document.getElementById("benchmark-interest-rate-slider").value/100+"%";
 document.getElementById("benchmark-interest-rate-slider").oninput = function() {
-document.getElementById("benchmark-interest-rate-input-display").innerHTML = this.value/100;
+document.getElementById("benchmark-interest-rate-input-display").innerHTML = this.value/100+"%";
 calIncome();
 }
 
-document.getElementById("cap-rate-input-display").textContent = document.getElementById("cap-rate-slider").value/100;
+document.getElementById("cap-rate-input-display").textContent = document.getElementById("cap-rate-slider").value/100+"%";
 document.getElementById("cap-rate-slider").oninput = function() {
-document.getElementById("cap-rate-input-display").textContent = this.value/100;
+document.getElementById("cap-rate-input-display").textContent = this.value/100+"%";
 calIncome();
 }
 
