--- a/capIncome.html
+++ b/capIncome.html
@@ -6,11 +6,14 @@
 <style>
 table.GeneratedTable {
   width: 100%;
+  max-width:1000px;
   border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 table.GeneratedTable td, table.GeneratedTable th {
-  font-size: 20px;
+  font-size: 30px;
   border-width: 2px;
   padding: 3px;
 }
@@ -24,7 +27,7 @@ table.GeneratedTable thead {
 text-align: left;
 }
 .output{
-font-size:25px;
+font-size:40px;
 color:green;
 font-weight:bold;
 }
@@ -37,8 +40,8 @@ width:100%;
 <body onload="calIncome()">
 <table class="GeneratedTable">
   <colgroup>
-       <col span="1" style="width: 50%;">
-       <col span="1" style="width: 50%;">
+       <col span="1" style="width: 70%;">
+       <col span="1" style="width: 30%;">
   </colgroup>
   <thead>
     <tr>
