--- a/capitIndexChart1W.html
+++ b/capitIndexChart1W.html
@@ -368,7 +368,8 @@ data.addRows([
 [new Date(2022,2,10,11,15,0),571.7],
 [new Date(2022,2,10,11,30,0),568.97],
 [new Date(2022,2,10,11,45,0),569.93],
-[new Date(2022,2,10,11,45,0),569.93]
+[new Date(2022,2,10,12,0,0),570.52],
+[new Date(2022,2,10,12,0,0),570.52]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -421,8 +422,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>570.5</td>
-<td class = "leftTextAlign">10 March 2022 12:00</td>
+<td>572.7</td>
+<td class = "leftTextAlign">10 March 2022 12:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
