--- a/capIncome2.html
+++ b/capIncome2.html
@@ -4,6 +4,9 @@
 
 <head>
 <style>
+body{
+	background-color:white;
+}
 @media only screen and (max-width:500px){
 table.GeneratedTable td,table.GeneratedTable th {
 font-size:9.5vw;
